<?xml version="1.0"?>
<package format="3">
  <name>FOSS</name>
  <version>0.1.0</version>
  <description>A FOSS robotics package for ROS 2</description>

  <maintainer email="dougsland@redhat.com">Douglas Schilling Landgraf</maintainer>
  <maintainer email="lrossett@redhat.com">Leonardo Rossetti</maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>requests</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
