[metadata]
name = FOSS
version = 0.1.0
description = A FOSS robotics package for ROS 2
author = Douglas Schilling Landgraf, Leonardo Rossetti
author_email = dougsland@redhat.com, lrossett@redhat.com
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    rclpy>=3.0.0
    requests>=2.25.0
python_requires = >=3.8

[options.package_data]
FOSS =
    *.xml
    *.txt

[options.entry_points]
console_scripts =
    FOSS_node = FOSS.node:main
